fix bugs on mobile category pages

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -386,6 +386,12 @@ a {
       justify-content: center;
       align-items: center;
       height: 100%;
+
+      &.active {
+        svg {
+          fill: theme("colors.emerald.500");
+        }
+      }
     }
   }
 
